--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -30,3 +30,51 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  height: 770px;
+  position: relative;
+}
+
+h1 {
+  color: #525454;
+  font-size: 22px;
+  margin: 0 0 10px 0;
+  text-align: center;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+  display: block;
+  box-sizing: border-box;
+}
+
+.options-box {
+  background: #fff;
+  border: 1px solid #999;
+  border-radius: 3px;
+  height: 100%;
+  line-height: 35px;
+  padding: 10px 10px 30px 10px;
+  text-align: left;
+  width: 340px;
+  z-index: 10;
+  width: 400px;
+  /*height: 100%;*/
+  position: absolute;
+  /* This trasform moves the drawer off canvas. */
+  /* -webkit-transform: translate(-400px, 0);
+  transform: translate(-400px, 0);
+  /* Optionally, we animate the drawer. */
+  /* transition: transform 2s ease; */ 
+}
+
+.options-box .open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+
+#show-listings, #hide-listings {
+  width: 48%;
+}
