add error handle for google map api, bouncing effect when activate, tabIndex for a11y

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -64,6 +64,7 @@ h1 {
   position: absolute;
   -webkit-transform: translate(-385px, 0);
   transform: translate(-385px, 0);
+  overflow: scroll;
 }
 
 .options-box.open {
